--- a/GriefPolice Mobile/.classpath
+++ b/GriefPolice Mobile/.classpath
@@ -2,7 +2,11 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/aweschke/Desktop/bukkit-1.4.7-R1.0.jar"/>
 	<classpathentry kind="lib" path="lib/sqlite4java.jar"/>
+	<classpathentry kind="lib" path="/Users/BTWT/Downloads/craftbukkit-1.4.7-R1.0.jar"/>
+	<classpathentry kind="lib" path="lib/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="lib/org.apache.httpcomponents.httpclient_4.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-nio-4.2.3.jar"/>
+	<classpathentry kind="lib" path="lib/httpcore-4.2.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
